Login form updated

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +9,21 @@
     <title>Welcome-Microblog</title>
     {% endif %}
 </head>
-
 <body>
     <div>
-        Microblog: <a href="/index">Home</a>
-        <a href="/login">Login</a>
+        Microblog: <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('login') }}">Login</a>
     </div>
     <hr>
+    {% with message=get_flashed_messages() %}
+    {% if message %}
+    <ul>
+        {% for message in message %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </body>
-
 </html>
