--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,15 +5,20 @@
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
-            {{ form.username.lable }}<br>
-            {{ form.username(size=32) }}
+            {{ form.username.label }}<br>
+            {{ form.username(size=32) }}<br>
+            {% for error in form.username.errors %}
+            <span style="color:red;">[{{ error }}]</span>
+            {% endfor %}
         </p>
         <p>
-            {{ form.password.lable }}<br>
-            {{ form.password(size=32) }}
+            {{ form.password.label }}<br>
+            {{ form.password(size=32) }}<br>
+            {% for error in form.password.errors %}
+            <span style="color:red;">[{{ error }}]</span>
+            {% endfor %}
         </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.lable }}</p>
-        <p> {{ form.terms }} {{ form.terms.lable }}</p>
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
 {% endblock %}
